--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/images/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Omar Lengua's Portfolio</title>
+    <script type="text/javascript">
+      (function() {
+        const redirectPath = sessionStorage.getItem('redirectPath');
+        // Limpiar siempre, incluso si no hay redirectPath, para evitar problemas en refrescos normales
+        sessionStorage.removeItem('redirectPath'); 
+        
+        if (redirectPath) {
+          window.history.replaceState(null, '', redirectPath);
+        }
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
